Add Priority column in UI